--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 [dependencies]
 rand="0.8"
 serde = { version = "1.0.159" , features = ["derive"] }
+clap = { version = "4.0", features = ["derive"] }
 serde_json = "1.0.96"
